k8s/backend-deployment.yaml
# 1-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
      - name: backend-container
        image: azamdevops/auth-backend:latest
        ports:
        - containerPort: 5000
